# win2d-uwp

./: Cargo.toml
crates/example/: Cargo.toml
crates/example/src/: main.rs  window_subclass.rs
crates/win2d-uwp/: Cargo.toml  build.rs
crates/win2d-uwp/src/: lib.rs
crates/win2d-uwp/src/Microsoft/: mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/: mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Brushes/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Effects/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Geometry/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Printing/: mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Svg/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/Text/: impl.rs  mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/UI/: mod.rs
crates/win2d-uwp/src/Microsoft/Graphics/Canvas/UI/Composition/: mod.rs
