[package]
name = "win2d-uwp"
version = "0.44.0"
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Windows"
repository = "https://github.com/microsoft/windows-rs"
documentation = "https://microsoft.github.io/windows-docs-rs/"
readme = "../../../docs/readme.md"
rust-version = "1.48"
categories = ["os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
rustc-args = ["--cfg", "docsrs"]

[dependencies.windows]
version = "0.44"

[features]
default = []
deprecated = []
implement = ["windows/implement"]
Graphics = []
Graphics_Canvas = ["Graphics"]
Graphics_Canvas_Brushes = ["Graphics_Canvas"]
Graphics_Canvas_Effects = ["Graphics_Canvas"]
Graphics_Canvas_Geometry = ["Graphics_Canvas"]
Graphics_Canvas_Printing = ["Graphics_Canvas"]
Graphics_Canvas_Svg = ["Graphics_Canvas"]
Graphics_Canvas_Text = ["Graphics_Canvas"]
Graphics_Canvas_UI = ["Graphics_Canvas"]
Graphics_Canvas_UI_Composition = ["Graphics_Canvas_UI"]
# windows crate
Windows_Foundation = ["windows/Foundation"]
Windows_Foundation_Collections = ["windows/Foundation_Collections"]
Windows_Foundation_Numerics = ["windows/Foundation_Numerics"]
Windows_Graphics_DirectX = ["windows/Graphics_DirectX"]
Windows_Graphics_DirectX_Direct3D11 = ["windows/Graphics_DirectX_Direct3D11"]
Windows_Graphics_Effects = ["windows/Graphics_Effects"]
Windows_Graphics_Imaging = ["windows/Graphics_Imaging"]
Windows_Graphics_Printing = ["windows/Graphics_Printing"]
Windows_Storage_Streams = ["windows/Storage_Streams"]
Windows_UI = ["windows/UI"]
Windows_UI_Composition = ["windows/UI_Composition"]
Windows_UI_Core = ["windows/UI_Core"]
Windows_UI_Input_Inking = ["windows/UI_Input_Inking"]
Windows_UI_Text = ["windows/UI_Text"]
