[package]
name = "win2d-uwp"
version.workspace = true
authors.workspace = true
edition = "2018"
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "../../../docs/readme.md"
rust-version = "1.48"
categories = ["os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
rustc-args = ["--cfg", "docsrs"]

[dependencies.windows]
version = "0.44"

[features]
default = []
deprecated = []
implement = ["windows/implement"]
Graphics = []
Graphics_Canvas = ["Graphics"]
Graphics_Canvas_Brushes = ["Graphics_Canvas"]
Graphics_Canvas_Effects = ["Graphics_Canvas"]
Graphics_Canvas_Geometry = ["Graphics_Canvas"]
Graphics_Canvas_Printing = ["Graphics_Canvas"]
Graphics_Canvas_Svg = ["Graphics_Canvas"]
Graphics_Canvas_Text = ["Graphics_Canvas"]
Graphics_Canvas_UI = ["Graphics_Canvas"]
Graphics_Canvas_UI_Composition = ["Graphics_Canvas_UI"]
# windows crate
Foundation = ["windows/Foundation"]
Foundation_Collections = ["windows/Foundation_Collections"]
Foundation_Numerics = ["windows/Foundation_Numerics"]
Graphics_DirectX = ["windows/Graphics_DirectX"]
Graphics_DirectX_Direct3D11 = ["windows/Graphics_DirectX_Direct3D11"]
Graphics_Effects = ["windows/Graphics_Effects"]
Graphics_Imaging = ["windows/Graphics_Imaging"]
Graphics_Printing = ["windows/Graphics_Printing"]
Storage_Streams = ["windows/Storage_Streams"]
UI = ["windows/UI"]
UI_Composition = ["windows/UI_Composition"]
UI_Core = ["windows/UI_Core"]
UI_Input_Inking = ["windows/UI_Input_Inking"]
UI_Text = ["windows/UI_Text"]
